<resources>
    <string name="app_name">Cat Avatar: Cat Maker</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="language">Language</string>
    <string name="title_1">Create your dream couple and style them your way!</string>
    <string name="title_2">Double the characters, double the fashion fun!</string>
    <string name="title_3">Design your perfect duo and rule the runway!</string>
    <string name="not_select_lang">Please select a language</string>
    <string name="pony_maker">Couple Creator</string>

    <string name="permission">Permission</string>
    <string name="storage">Storage</string>
    <string name="continue_per">Continue</string>
    <string name="notification">Notification</string>
    <string name="granted_notification">Notification permission granted</string>
    <string name="granted_storage">Storage permission granted</string>
    <string name="allow">Allow</string>
    <string name="to_access">to access photos on your device</string>
    <string name="to_access_13">to access notification on your device</string>
    <string name="go_to_setting_message">The app needs this permission</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="add_image">Add Image</string>
    <string name="text">Text</string>
    <string name="type_your_content">Type_your_content</string>
    <string name="loading">Loading...</string>
    <string name="haven_t_saved_it_yet_do_you_want_to_exit">Haven’t saved it yet, do you want to exit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="null_edt">Please enter text</string>
    <string name="done">Done</string>
    <string name="choose_color">Choose Color</string>
    <string name="do_you_want_to_reset_all">Do you want to reset all?</string>
    <string name="reset">Reset</string>
    <string name="exit">Exit</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="image_has_been_saved_successfully">Image has been saved successfully!</string>
    <string name="download">Download</string>
    <string name="avatar">Avatar</string>
    <string name="my_avatar">My Avatar</string>
    <string name="design">Design</string>
    <string name="no_item_here">No Item Here</string>
    <string name="add_to_whatsapp">Add To WhatsApp</string>
    <string name="add_to_telegram">Add To Telegram</string>
    <string name="share">Share</string>
    <string name="no_app_found_to_handle_this_action">No app found to handle this action</string>
    <string name="download_success">Download successful to the %s album</string>
    <string name="download_fail">Download failed, please try again later!</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_want_to_delete_this_item">Are you sure want to delete this item?</string>
    <string name="please_select_an_image">Please select an image</string>
    <string name="limit_3_items">At least 3 items are required to create a sticker</string>
    <string name="limit_30_items">Only a maximum of 30 items can be added</string>
    <string name="invalid_action_msg">Application not installed</string>
    <string name="invalid_action">Error</string>
    <string name="download_failed_please_try_again_later">Download failed, please try again later!</string>
    <string name="edit">Edit</string>
    <string name="rate">Rate</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>

    <string name="zero_star_title">Do you like the app?</string>
    <string name="zero_star">Let us know your experience</string>

    <string name="one_star_title">Oh, no</string>
    <string name="one_star">Please give us some feedback</string>

    <string name="two_star_title">Oh, no</string>
    <string name="two_star">Please give us some feedback</string>

    <string name="three_star_title">Oh, no</string>
    <string name="three_star">Please give us some feedback</string>

    <string name="four_star_title">We love you too</string>
    <string name="four_star">Thanks for your feedback</string>

    <string name="five_star_title">We love you too</string>
    <string name="five_star">Thanks for your feedback</string>

    <string name="rate_us_0">You have not rated it yet!</string>
    <string name="have_rated">Thank you for rate our app</string>
    <string name="refresh">Refesh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cosplay">Cosplay</string>
    <string name="permission_camera_denied">Cần quyền camera để sử dụng tính năng này</string>
    <string name="cat_random">Cat Random</string>
    <string name="random">Random</string>
    <string name="my_creation">My Couple</string>
    <string name="my_creation1">My couple</string>
    <string name="category">Category</string>
    <string name="image">Image</string>
    <string name="color">Color</string>
    <string name="successful">Successful</string>
    <string name="context_guide_body">Cosplay Mode, players are randomly given one reference image to follow. Your task is to recreate that character as accurately as possible by choosing the right hairstyles, outfits, colors, and accessories. Every correct match increases your percentage score (%). The closer your character looks to the random image, the higher your final score will be. Pay attention to small details to achieve the best cosplay result.</string>
    <string name="try_again">Try Again</string>
    <string name="no_internet">No internet</string>
    <string name="internet">Internet</string>
    <string name="please_connect_to_the_internet_to_download_more_data">Please connect to the internet to download more data</string>
    <string name="unstable_connection_please_check_your_network_connection">Unstable connection, please check your network connection</string>
    <string name="ok">Okay</string>
    <string name="please_wait_a_few_seconds_for_data_to_load">Please wait a few seconds for data to load.</string>
    <string name="create_package_name">Create Package Name</string>
    <string name="enter_your_package_name">Enter your package name</string>
    <string name="please_enter_your_package_name">Please enter your package name!</string>
    <string name="this_action_may_contain_advertising">This action can contain ads</string>
    <string name="error">Notice</string>
    <string name="errorcontent">This character has been removed and can\'t be edited</string>
    <string name="frame_design">Frame Design</string>
    <string name="frame">Frame</string>
    <string name="add_frame">Add Frame</string>
    <string name="gallery">Gallery</string>
    <string name="create">Create</string>
    <string name="the_app_need_read_storage">The app need read storage</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="size">Size</string>
    <string name="font">Font</string>
    <string name="please_wait">Please wait...</string>
</resources>
