<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:clipChildren="false"
android:clipToPadding="false"

tools:context=".ui.main.frameDesign.successful.SuccessfulFrameFragment">


<ImageView
    android:id="@+id/imageView11"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:adjustViewBounds="true"
    android:elevation="-1dp"
    android:scaleType="fitXY"
    android:src="@drawable/img_bg_splash"
    tools:layout_editor_absoluteX="-16dp"
    tools:layout_editor_absoluteY="125dp" />

<FrameLayout
    android:id="@+id/layoutActionBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent">
    <include
        android:id="@+id/actionBar"
        layout="@layout/layout_actionbar" />
</FrameLayout>
<ImageView
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:cardBackgroundColor="@color/app_color4"
    app:cardCornerRadius="24dp"
    app:layout_constraintDimensionRatio="3:4"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/layoutActionBar"
    app:layout_constraintBottom_toTopOf="@+id/lnlBottom"
    android:layout_marginBottom="90dp"
    android:layout_marginHorizontal="30dp"
    android:id="@+id/imvImage"
    android:scaleType="centerCrop"
    android:src="@drawable/img_permission" />

<com.oc.catemoji.catoc.core.extention.OuterStrokeTextView
    android:id="@+id/tvSuccess"
    style="@style/single_marquee"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="@font/kavoon_regular"
    android:gravity="center"
    android:text="@string/image_has_been_saved_successfully"
    android:textColor="@color/white"
    app:outerStrokeColor="@color/app_color"
    app:outerStrokeWidth="0.8dp"
    android:textSize="16sp"
    app:layout_constraintBottom_toTopOf="@+id/lnlBottom"
    app:layout_constraintTop_toBottomOf="@+id/imvImage" />


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/lnlBottom"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:paddingHorizontal="27dp"
    android:background="@drawable/bg_mycreation"
    app:layout_constraintDimensionRatio="3.6:0.89"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    >




    <FrameLayout
        android:id="@+id/btnBottomLeft"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spacer"
        app:layout_constraintDimensionRatio="1.36:0.40"
        android:layout_height="0dp">


        <ImageView
            android:id="@+id/imgViewFor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/bg_frame_successtrue" />
        <TextView
            android:id="@+id/txtLeft"
            style="@style/single_marquee"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/my_creation"
            android:textColor="@color/white"
            android:fontFamily="@font/kavoon_regular"
            android:textSize="16sp" />
    </FrameLayout>

    <Space
        android:id="@+id/spacer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintDimensionRatio="0.34:0.40"/>


    <FrameLayout
        android:id="@+id/btnBottomRight"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spacer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1.36:0.40"
        android:layout_height="0dp">


        <ImageView
            android:id="@+id/imgViewFor1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/bg_frame_successfalse" />
        <TextView
            android:id="@+id/txtRight"
            style="@style/single_marquee"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/download"
            android:textColor="@color/app_color"
            android:fontFamily="@font/kavoon_regular"
            android:textSize="16sp" />
    </FrameLayout>
    <!--        btnBottomRight-->

</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>