<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg_splash"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.onboarding.permission.PermissionFragment">
    <FrameLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/layout_actionbar" />
    </FrameLayout>



    <ImageView
        android:id="@+id/imgPermission"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="3.6:1.93"
        android:adjustViewBounds="true"
        android:src="@drawable/img_permission"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/txtPermission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutActionBar" />

    <com.oc.catemoji.catoc.core.extention.OuterStrokeTextView
        android:id="@+id/txtPermission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:fontFamily="@font/kavoon_regular"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:outerStrokeColor="@color/app_color"
        app:outerStrokeWidth="1dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/tvContinue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <!-- btnStorage-->
            <RelativeLayout
                android:id="@+id/btnStorage"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="1dp"
                android:background="@drawable/bg_frame_permission">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="24dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="6dp"
                    style="@style/single_marquee"
                    android:text="@string/storage"
                    android:textColor="@color/white"
                    android:fontFamily="@font/kavoon_regular"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/swPermission"
                    android:layout_width="56dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:paddingBottom="2dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/switch_off" />
            </RelativeLayout>

            <!-- btnNotification-->
            <RelativeLayout
                android:id="@+id/btnNotification"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_frame_permission">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="24dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="6dp"
                    style="@style/single_marquee"
                    android:text="@string/notification"
                    android:textColor="@color/white"
                    android:fontFamily="@font/kavoon_regular"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/swNotification"
                    android:layout_width="56dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="8.5dp"
                    android:layout_marginBottom="11.5dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/switch_off" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
    <TextView
        android:id="@+id/tvContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="200dp"
        android:gravity="center"
        android:fontFamily="@font/kavoon_regular"
        android:text="@string/continue_per"
        android:textColor="@color/app_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>